--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^3.4"
+        "livewire/livewire": "^3.4",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.30"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
